--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.1",
   "description": "An http endpoint that provides realtime views",
   "main": "index.js",
+  "bin": {
+    "http-receiver": "node index.js"
+  },
   "scripts": {
     "start": "node index.js",
     "lint": "eslint *.js",
