--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/harttle/http-receiver#readme",
   "dependencies": {
+    "concat-stream": "^1.6.2",
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
   }
